# cpp-autotools-boilerplate

./: .clang-format  .gitignore  Makefile.am  README.md  configure.ac
docs/: Doxyfile.in  Makefile.am
include/: Makefile.am  mylib.hpp
include/mylib/: myclass.hpp
src/: Makefile.am  myclass.cpp
test/: Makefile.am  myclass_test.cpp  runner.cpp
